# rofl-ofdpa

./: .gitignore  .gitlab-ci.yml  .travis.yml  Makefile.am  autogen.sh  configure.ac  rofl_ofdpa.pc.in  version.sh
.copr/: Makefile
config/: rofl.m4  versioning.m4
include/: Makefile.am  rofl_ofdpa_fm_driver.hpp
include/rofl/ofdpa/: rofl_ofdpa_fm_driver.hpp
lib/: Makefile.am  ofdpa_datatypes.h  rofl_ofdpa_fm_driver.cpp
pkg/release/rpm/: rofl-ofdpa.spec.in
pkg/rhel/: .gitignore  rofl-ofdpa.spec.in
pkg/testing/rpm/: .gitignore  Makefile  rofl-ofdpa.spec.envsubst
salt/: rofl-common.sls
tools/: ofdpa-ttp.json  parse_ttp.py
